go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@fuego.snap
---
source: go-runner/src/integration_tests.rs
expression: results
---
[
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkCamelToHuman::camelToHuman",
        "uri": "net_http_mux_test.go::BenchmarkCamelToHuman::camelToHuman",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkContext_Body::invalid_JSON_body",
        "uri": "ctx_test.go::BenchmarkContext_Body::invalid_JSON_body",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkContext_Body::string_body",
        "uri": "ctx_test.go::BenchmarkContext_Body::string_body",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkContext_Body::valid_JSON_body",
        "uri": "ctx_test.go::BenchmarkContext_Body::valid_JSON_body",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkContext_Body::valid_JSON_body_cache",
        "uri": "ctx_test.go::BenchmarkContext_Body::valid_JSON_body_cache",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkHTTPError_PublicError",
        "uri": "errors_test.go::BenchmarkHTTPError_PublicError",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkOutTransform::pointer_to_nil",
        "uri": "serialization_test.go::BenchmarkOutTransform::pointer_to_nil",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkOutTransform::pointer_to_value",
        "uri": "serialization_test.go::BenchmarkOutTransform::pointer_to_value",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkOutTransform::value",
        "uri": "serialization_test.go::BenchmarkOutTransform::value",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkParsePathParams::empty",
        "uri": "params_test.go::BenchmarkParsePathParams::empty",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkParsePathParams::several_path_params",
        "uri": "params_test.go::BenchmarkParsePathParams::several_path_params",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkReadJSON",
        "uri": "deserialization_test.go::BenchmarkReadJSON",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkReadString",
        "uri": "deserialization_test.go::BenchmarkReadString",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkRender",
        "uri": "html_test.go::BenchmarkRender",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkRequest::fuego_server_and_fuego_post",
        "uri": "net_http_mux_test.go::BenchmarkRequest::fuego_server_and_fuego_post",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkRequest::fuego_server_and_std_post",
        "uri": "net_http_mux_test.go::BenchmarkRequest::fuego_server_and_std_post",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkRequest::std_server_and_std_post",
        "uri": "net_http_mux_test.go::BenchmarkRequest::std_server_and_std_post",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkRoutesRegistration",
        "uri": "openapi_test.go::BenchmarkRoutesRegistration",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkServer_generateOpenAPI",
        "uri": "openapi_test.go::BenchmarkServer_generateOpenAPI",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  }
]
