go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@fzf.snap
---
source: go-runner/src/integration_tests.rs
expression: results
---
[
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkExtractColor",
        "uri": "src/ansi_test.go::BenchmarkExtractColor",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkNextAnsiEscapeSequence",
        "uri": "src/ansi_test.go::BenchmarkNextAnsiEscapeSequence",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkNextAnsiEscapeSequence_Regex",
        "uri": "src/ansi_test.go::BenchmarkNextAnsiEscapeSequence_Regex",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  }
]
