go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@golang-benchmarks_12.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "[version]",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkMathAtomicInt32",
      "uri": "math/math_test.go::BenchmarkMathAtomicInt32",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathAtomicInt64",
      "uri": "math/math_test.go::BenchmarkMathAtomicInt64",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathFloat32",
      "uri": "math/math_test.go::BenchmarkMathFloat32",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathFloat64",
      "uri": "math/math_test.go::BenchmarkMathFloat64",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathInt32",
      "uri": "math/math_test.go::BenchmarkMathInt32",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathInt64",
      "uri": "math/math_test.go::BenchmarkMathInt64",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathInt8",
      "uri": "math/math_test.go::BenchmarkMathInt8",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMathMutexInt",
      "uri": "math/math_test.go::BenchmarkMathMutexInt",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
